# DropAds

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/ai/: openAI.py
src/audio/: eleven_tts.py  tiktok_tts.py  tts.py
src/config/: prompts.py
src/video/: assembler.py  clipSelector.py
